   * Apply disply mode to all views of a naviframe if the display mode of the views are changed. Sometimes views are couldn't be recoverved to a previous status if they are stacked into more depth.
   * Fix the scroll position is calculated by the size of pan object, not the size of scroller.
   * Fix a elm_transit crash issue when user delete all target objects in the effect end callback.

Removals:

   * All internal widget hooks (and related macros) were removed, due
     to deprecation. Thus, people using that (unstable) API will have
     to adapt themselves.
   * Deprecate elm_label_slide_set(), elm_label_slide_get().

Changes since Elementary 1.0.0:
-------------------------

Additions:

   * Focus can be moved in all directions by elm_widget_focus_go function.
   * Reload theme when it change on disk.
   * Fileselector: Add a wheel spinner that show/spin while EIO is working
   * Add elm_map_overlays_get & elm_map_overlay_visible_get functions.
   * Toolbar: Add elm_toolbar_standard_priority_set/get APIs.
   * Add elm_object_scroll_hold/freeze_get.
   * Add ELM_CALENDAR_LAST_DAY_OF_MONTH enum type
   * Add elm_progressbar_format_function_set API function
   * Add elm_map_overlay_del_cb_set API function
   * Add "changed" signal to the progressbar widgets
   * Use Edje to enable accessibility on TEXTBLOCK.
   * Initialize Emotion when necessary.
   * Elm_Win_Trap and elm_win_trap_set() to allow e17 integration.
   * elm_flip_go_to()
   * On focus loss, Elm_Spinner properly hide Elm_Entry and display label properly.

Fixes:

   * Genlist : fixed genlist expandable effect bug when we expand/contract items with many children very quickly.
   * Genlist : realize move items during tree effect only when the item is not in the queue.
   * Add missing files in the tarball.
   * Fileselector : honor the folder_only option when using EIO
   * Segment Selector : do not abuse user object item data.
   * Image: fixed elm_image_orient_set/get.